# py_visualizer

./: .gitignore  CMakeLists.txt  READMD.md  gui.cpp  py_convert.hpp  py_exception.hpp  py_helper.hpp  py_plugin.cpp  py_plugin.h  py_visualizer-config-version.cmake  py_visualizerConfig.cmake  visualizer.py
cmake/: py_visualizerConfig.cmake  py_visualizer_files.cmake.in  test_definition.txt
core_plugins/: extract_contours.py  gauge_io.py  gds_io.py  gds_op.py  hole_algo.py  image_io.py  klayout_op.py  optimize.py  params_io.py  plot_curves.py  plot_source.py  search.py
deprecated_plugins/: gds_op.py
py_tools/: gds_io.py  image_io.py
